add div container

--- a/index.html
+++ b/index.html
@@ -13,67 +13,69 @@
 </head>
 
 <body>
-  <img src="./img/gabriel.jpg" alt="Imagem de perfil do Gabriel" />
-
-  <h1>Gabriel Rodrigues</h1>
-  <p>
-    <em>Líder de Desenvolvimento na <strong class="jazzz">Jazzz Agência Digital 🎷</strong></em>
-  </p>
-  <p id="sobre">
-    Desenvolvedor Front-End, cursando primeiro período de Análise e Desenvolvimento de Sistemas na <span class="cesar">CESAR School</span> 🛸.
-  </p>
-  <p><i class="fa-brands fa-linkedin"></i> Veja meu <a href="https://br.linkedin.com/in/grbritto">Linkedin</a></p>
-  <p class="instagram"><i class="fa-brands fa-square-instagram"></i> Visite o meu <a href="https://instagram.com/gr_britto">Instagram</a></p>
-
-  <hr />
-  <h3>Cursos e especilizações</h3>
-  <ul>
-    <li>Desenvolvimento Web Full-Stack - ProgramadorBr</li>
-    <li>Formação NodeJS - Udemy</li>
-    <li>
-      Graduação em andamento - ADS - CESAR School
-    </li>
-  </ul>
-
-  <hr />
-  <h3>Meus hobbies</h3>
-  <ol>
-    <li>Esportes ⚽🏀</li>
-    <li>Filmes, séries e desenhos animados 📺</li>
-    <li>Jogos Eletrônicos 🎮</li>
-  </ol>
-
-  <hr>
-  <h3>Experiências Profissionais</h3>
-  <table>
-    <tr>
-      <th>Data</th>
-      <th>Experiência</th>
-      <th>Empresa</th>
-    </tr>
-    <tr>
-      <td>
-        2020 - 2021
-      </td>
-      <td>
-        Operador de Vendas
-      </td>
-      <td>
-        Farmácias Independente
-      </td>
-    </tr>
-    <tr>
-      <td>
-        2022 - Atualmente
-      </td>
-      <td>
-        Desenvolvedor Front-end
-      </td>
-      <td>
-        Jazzz Agência Digital
-      </td>
-    </tr>
-  </table>
+  <div class="container">
+    <img src="./img/gabriel.jpg" alt="Imagem de perfil do Gabriel" />
+  
+    <h1>Gabriel Rodrigues</h1>
+    <p>
+      <em>Líder de Desenvolvimento na <strong class="jazzz">Jazzz Agência Digital 🎷</strong></em>
+    </p>
+    <p id="sobre">
+      Desenvolvedor Front-End, cursando primeiro período de Análise e Desenvolvimento de Sistemas na <span class="cesar">CESAR School</span> 🛸.
+    </p>
+    <p><i class="fa-brands fa-linkedin"></i> Veja meu <a href="https://br.linkedin.com/in/grbritto">Linkedin</a></p>
+    <p class="instagram"><i class="fa-brands fa-square-instagram"></i> Visite o meu <a href="https://instagram.com/gr_britto">Instagram</a></p>
+  
+    <hr />
+    <h3>Cursos e especilizações</h3>
+    <ul>
+      <li>Desenvolvimento Web Full-Stack - ProgramadorBr</li>
+      <li>Formação NodeJS - Udemy</li>
+      <li>
+        Graduação em andamento - ADS - CESAR School
+      </li>
+    </ul>
+  
+    <hr />
+    <h3>Meus hobbies</h3>
+    <ol>
+      <li>Esportes ⚽🏀</li>
+      <li>Filmes, séries e desenhos animados 📺</li>
+      <li>Jogos Eletrônicos 🎮</li>
+    </ol>
+  
+    <hr>
+    <h3>Experiências Profissionais</h3>
+    <table>
+      <tr>
+        <th>Data</th>
+        <th>Experiência</th>
+        <th>Empresa</th>
+      </tr>
+      <tr>
+        <td>
+          2020 - 2021
+        </td>
+        <td>
+          Operador de Vendas
+        </td>
+        <td>
+          Farmácias Independente
+        </td>
+      </tr>
+      <tr>
+        <td>
+          2022 - Atualmente
+        </td>
+        <td>
+          Desenvolvedor Front-end
+        </td>
+        <td>
+          Jazzz Agência Digital
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
 
 </html>
