--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
   <div class="container">
-    <img src="./img/gabriel.jpg" alt="Imagem de perfil do Gabriel" />
+    <img class="banner" src="./img/banner.jpg" alt="Ilustração de um notebook com a legenda UI/UX Development">
+    <img class="perfil" src="./img/gabriel.jpg" alt="Imagem de perfil do Gabriel" />
   
     <h1>Gabriel Rodrigues</h1>
     <p>
